--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,6 @@
             body {
                 min-height: 100%;
                 -webkit-user-select: none;
-
             }
 
             body {
@@ -60,11 +59,6 @@
             }
 
             .hdr__logo::before {
-                background: #e40492;
-                background: #15D4D3;
-                background: #14A1D9;
-                background: #BF048D;
-                background: #16F2F2;
                 background: #ffffff;
                 box-sizing: border-box;
                 content: " ";
@@ -197,9 +191,9 @@
             }
 
             .no-js .apologies {
-                background: goldenrod;
+                background: #eeeeee;
                 color: #111111;
-                font-size: 1.25em;
+                font-size: 1.5em;
                 line-height: 1.5;
                 margin: 0 0 2em 0;
                 padding: 2em;
@@ -214,7 +208,6 @@
                 const html = document.getElementsByTagName('html')[0];
                 html.classList.add(clss);
                 html.classList.remove('no-js');
-                html.classList.add('js');
             })(document, window)
         </script>
     </head>
