Change method for hiding inputs
Using `display: none` meant that the colour input was not working in Safari -
changing to use the visually hidden method means colour pallete appears when the
change frame colour button is selected.

--- a/src/index.html
+++ b/src/index.html
@@ -104,7 +104,16 @@
             }
 
             .add-photo__input {
-                display: none;
+                bottom: 0;
+                clip-path: inset(50%);
+                clip: rect(0 0 0 0);
+                height: 1px;
+                left: 50%;
+                margin: 0;
+                overflow: hidden;
+                position: absolute;
+                white-space: nowrap;
+                width: 1px;
             }
 
             .button {
